fix overflowing parent, styling changes, scroll if overflows

--- a/src/common/Layout/Sidebar/Sidebar.module.css
+++ b/src/common/Layout/Sidebar/Sidebar.module.css
@@ -8,5 +8,7 @@
   background-color: rgb(30 64 175);
   z-index: 20;
 
-  padding: 1.35rem 0;
+  height: 100vh;
+  padding: 0 0 1.35rem 0;
+  overflow: auto;
 }
